syntax = "proto3";

option java_multiple_files = true;
option java_package = "ultimate";
option java_outer_classname = "UltimateProto";

package ultimate_api.v1;

// 操作回复
message OperationReply {
  int32 code = 1;
  optional string message = 2;
}

// 分页请求
message Pagination {
  int64 page = 1;
  int64 page_size = 2;
  repeated SortBy sort_bys = 3;
  optional int64 offset = 4;
}

// 分页回复
message Page {
  int64 page = 1;
  int64 page_size = 2;
  int64 total_size = 3;
  int64 total_page = 4;
}

// 排序
message SortBy {
  string field = 1;
  SortDirection direction = 2;
}

// 排序方向
enum SortDirection {
  SORT_DIRECTION_ASC = 0;
  SORT_DIRECTION_DESC = 2;
}
